@@ -1,6 +1,6 @@
 Package: plm
 Version: 1.6-6
-Date: 2017-09-26
+Date: 2017-09-28
 Title: Linear Models for Panel Data
 Authors@R: c(person(given = "Yves",      family = "Croissant",    role = c("aut", "cre"), email = "yves.croissant@univ-reunion.fr"),
              person(given = "Giovanni",  family = "Millo",        role = "aut", email = "Giovanni.Millo@Generali.com"),
@@ -11,9 +11,9 @@ Authors@R: c(person(given = "Yves",      family = "Croissant",    role = c("aut"
       	     person(given = "Arne",      family = "Henningsen",   role = "ctb", email = "arne.henningsen@googlemail.com"),
       	     person(given = "Liviu",     family = "Andronic",     role = "ctb", email = "landronimirc@gmail.com"),
       	     person(given = "Nina",      family = "Schoenfelder", role = "ctb", email = "nina.schoenfelder@fernuni-hagen.de"))
-Depends: R (>= 2.12.0), Formula (>= 0.2-0), stats, maxLik
-Imports: MASS, bdsmatrix, zoo, nlme, sandwich, lattice, lmtest, statmod
-Suggests: AER, foreign, car, pcse, clusterSEs, clubSandwich, pder, pglm, spdep, splm, stargazer, texreg, Ecdat
+Depends: R (>= 3.1.0), Formula (>= 0.2-0), stats, maxLik
+Imports: MASS, bdsmatrix, zoo, nlme, sandwich, lattice, lmtest
+Suggests: AER, car, pcse, clusterSEs, clubSandwich, pglm, spdep, splm, statmod, stargazer, texreg, Ecdat, foreign
 Description: A set of estimators and tests for panel data.
 License: GPL (>=2)
 URL: https://cran.r-project.org/package=plm, https://r-forge.r-project.org/projects/plm/
