@@ -84,7 +84,12 @@ Changes in version 1.6-6
       * 'shared' renamed to 'shared.times' (with a back-compatible solution),
       * 'shared.individuals' added as additional option (symmetric case).
   * cosmetic: some print functions now have better aligned whitespacing.
-  * Dependencies: package 'car' moved from 'Imports' to 'Suggests'.
+  * Dependencies:
+      * R version >= 3.1 is required now.
+      * 'Depends': maxLik added.
+      * moved from 'Imports' to 'Suggests': car.
+      * 'Suggests' added: pcse, clusterSEs, clubSandwich, pglm, spdep, splm,
+                          statmod, stargazer, texreg, Ecdat, foreign.
 
 
 Changes in version 1.6-5
